fix footer on safari

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -832,6 +832,7 @@ hr {
         letter-spacing: @font__p--letter-spacing;
     }
     @media @tablet {
+        display: block;
         padding: 30px 5%;
     }
 }
